welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;
override def run() {
var x = getMondeHauteur();
var n = 0;
var z = getMondeLargeur
var pos = false

do{
	var j = 0;	
	

		for (k <- 0 to 6;  i <- 0 to k){
			if(j!=0){
				j = j - 1;
			}else{
				j = k;
			}
			setPos(i,j);	  
			ecritMessage(n);                                                     
			n = n + 1;
		}
			j = 6;
	
		for (k <- 1 to 6){
			j = 6;
			for(i <- k to 6){
				setPos(i,j)
				ecritMessage(n)
				n = n + 1
				j = j - 1
		}
		}
	if(i == 6 && j == 6){pos = true}
}while(!pos)	
		
}
